# C-homework

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-lint.yml
src/CSV/: CMakeLists.txt  CSV.c  CSV.h  main.c
src/CSV/test/input/: input_2.csv  input_3.csv
src/CSV/test/output/: output_2.txt  output_3.txt
src/avl_tree/: CMakeLists.txt  avl_tree.c  avl_tree.h  avl_tree_Internal.h  avl_tree_debug.c  avl_tree_tests.c
src/flight_registration/: CMakeLists.txt  main.c
